fixed signout redirect, and navbar overflow issue

--- a/client/src/styling/App.css
+++ b/client/src/styling/App.css
@@ -7,7 +7,7 @@
 }
 
 .navbar{
-  position: sticky;
+  position: relative;
   top:0px;
   left:0px;
   background-color: rgba(0, 0, 0, 0.575) !important;
